loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:11: error: value Blue is not a member of object java.awt.Color
setCouleurBrosse(Color.Blue)
                       ^