loopfor.LoopStairs.scala.code
setCouleurBrosse(Color.lightGray)
baisseBrosse()
avance()
avance()
avance()
leveBrosse()
gauche()
avance()
droite()
avance()
setCouleurBrosse(Color.Blue)
baisseBrosse()
avance()
leveBrosse()